--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -5,9 +5,8 @@
         alignment: center;
     }
     
-    input[type="checkbox"]:checked + span {
-        border-color: #28a745;
-        border-width: 2px;
+    input[type="radio"]:checked + span {
+        border:2px solid #000;
     }
     
     .wrapper {
@@ -31,20 +30,20 @@
                 <div >
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="checkbox" asp-for="HeroType" value="1"
-                               style="display: none;"><span style="background: url(/img/hero1.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
+                        <input type="radio" asp-for="HeroType" value="1"
+                               style="visibility: hidden;"><span style="background: url(/img/hero1.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
                 <div class="hero-check">
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="checkbox" asp-for="HeroType" value="2"
-                               style="display: none;"><span style="background: url(/img/hero2.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
+                        <input type="radio" asp-for="HeroType" value="2"
+                               style="visibility: hidden;"><span style="background: url(/img/hero2.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
                 <div class="hero-check2">
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="checkbox" asp-for="HeroType" value="3"
-                               style="display: none;"><span style="background: url(/img/hero3.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
+                        <input type="radio" asp-for="HeroType" value="3"
+                               style="visibility: hidden;"><span style="background: url(/img/hero3.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
             </div>
             <!-- end of wrapper -->
