Add page titles

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,4 +1,9 @@
 @model WebApplication1.ViewModels.RegisterViewModel
+
+@{
+    ViewData["Title"] = "Register";
+}
+
 <h2>Register</h2>
 <style>
     h1, h2 , h3 {
