--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,5 +1,9 @@
 @model WebApplication1.ViewModels.LoginViewModel
 
+@{
+    ViewData["Title"] = "Login";
+}
+
 <h2>Login</h2>
 <form method="post" asp-controller="Account" asp-action="Login"
       asp-route-returnUrl="@Model.ReturnUrl">
