Added MongoDB. Now players creating while registration. CSS modified.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -14,9 +14,11 @@
     }
     
     .hero-check {
+        margin-top : -55px;
         margin-left: 400px;
     }
     .hero-check2 {
+        margin-top: -55px;
         margin-left: 800px;
     }
 </style>
