Redirect to profile after registration and login.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -62,9 +62,9 @@
                     <span asp-validation-for="Email"></span>
                 </div>
                 <div>
-                    <label asp-for="Nick"></label><br/>
-                    <input asp-for="Nick"/>
-                    <span asp-validation-for="Nick"></span>
+                    <label asp-for="Nickname"></label><br/>
+                    <input asp-for="Nickname"/>
+                    <span asp-validation-for="Nickname"></span>
                 </div>
                 <div>
                     <label asp-for="Password"></label><br/>
