--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" title="Manage">@User.Identity.Name</a>
+        <a  class="nav-link text-dark" href="/Account/Profile" title="Manage">Profile</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-controller="Account" asp-action="LogOff" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
