Improve character selection + add profile link

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,7 +10,14 @@
         alignment: center;
     }
     
+    input[type="radio"]:hover + span {
+        border:2px solid #999;
+    }
+    
     input[type="radio"]:checked + span {
+        border:2px solid #000;
+    }
+    input[type="radio"]:checked:hover + span {
         border:2px solid #000;
     }
     
