Added stats to profile view

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -5,7 +5,7 @@
     }
 </style>
 
-<h2>Profile of <i>somebody once told me</i></h2>
+<h2>Profile of <i>@TempData["Nickname"]</i></h2>
 <div class="container">
     <p><b>Tier:</b> 88</p>
     <br/>
@@ -15,7 +15,7 @@
             <p>Strength</p>
             <div class="progress" style="height: 20px;">
                 <div class="progress-bar" role="progressbar" 
-                     style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">20</div>
+                     style="width: 100%;" aria-valuenow=@TempData["Strength"] aria-valuemin="0" aria-valuemax="100">20</div>
             </div>
         </li>
         <li class="list-group-item">
@@ -31,7 +31,7 @@
     </ul>
     <br/>
     <h4>Inventory:</h4>
-    <p><img src="/img/shekel.png" width="16" height="16" style="margin-bottom: 3px;"/> <b>Gold:</b> 228</p>
+    <p><img src="/img/shekel.png" width="16" height="16" style="margin-bottom: 3px;"/> <b>Gold:</b>@TempData["Gold"]</p>
     <div style="width: calc(48px * 6 + 5px); height: calc(48px * 6 + 5px);">
         <table class="table table-bordered" id="inv">
         <tr>
