Added hero pic to profile. Still needed to rebuild profile page's html.

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -44,19 +44,19 @@
                 <div >
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="radio" asp-for="HeroType" value="1"
+                        <input type="radio" asp-for="HeroType" value="/img/hero1.png"
                                style="visibility: hidden;"><span style="background: url(/img/hero1.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
                 <div class="hero-check">
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="radio" asp-for="HeroType" value="2"
+                        <input type="radio" asp-for="HeroType" value="/img/hero2.png"
                                style="visibility: hidden;"><span style="background: url(/img/hero2.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
                 <div class="hero-check2">
                     <label style="display: block; position: relative"></label><br/>
                     <label style="display: block; position: relative">
-                        <input type="radio" asp-for="HeroType" value="3"
+                        <input type="radio" asp-for="HeroType" value="/img/hero3.png"
                                style="visibility: hidden;"><span style="background: url(/img/hero3.png) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span></label>
                 </div>
             </div>
