--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,87 +1,105 @@
 @model WebApplication1.ViewModels.ProfileViewModel;
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+
 <style type="text/css">
     #inv td {
         padding: 0;
     }
 </style>
-
-<h2>Profile of <i>@TempData["Nickname"]</i></h2>
-<div class="container">
-    <p><b>Tier:</b> 88</p>
-    <br/>
-    <h4>Stats:</h4>
-    <ul class="list-group">
-        <li class="list-group-item">
-            <p>Strength</p>
-            <div class="progress" style="height: 20px;">
-                <div class="progress-bar" role="progressbar" 
-                     style="width: 100%;" aria-valuenow=@TempData["Strength"] aria-valuemin="0" aria-valuemax="100">20</div>
+@if (SignInManager.IsSignedIn(User))
+{
+    <h2>Profile of <i>@TempData["Nickname"]</i></h2>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h4>Your hero</h4>
+                <span style="background: url(@TempData["HeroType"]) no-repeat; position: absolute; width: 300px; height: 484px; cursor: pointer"></span>
             </div>
-        </li>
-        <li class="list-group-item">
-            <p>Agility</p>
-            <div class="progress" style="height: 20px;">
-                <div class="progress-bar" role="progressbar" 
-                     style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">15</div>
+            <div class="col">
+                <p><b>Tier:</b> @TempData["Tier"]</p>
+                <br/>
+                <h4>Stats:</h4>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <p>Strength</p>
+                        <div class="progress" style="height: 20px;">
+                            <div class="progress-bar" role="progressbar"
+                                 style="width: @TempData["Strength"]%;" aria-valuenow=@TempData["Strength"] aria-valuemin="0" aria-valuemax="100">@TempData["Strength"]</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <p>Agility</p>
+                        <div class="progress" style="height: 20px;">
+                            <div class="progress-bar" role="progressbar"
+                                 style="width: @TempData["Agility"]%;" aria-valuenow=@TempData["Agility"] aria-valuemin="0" aria-valuemax=@TempData["Agility"]>@TempData["Strength"]</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <p>And so on...</p>
+                    </li>
+                </ul>
+                <br/>
+                <h4>Inventory:</h4>
+                <p><img src="/img/shekel.png" width="16" height="16" style="margin-bottom: 3px;"/> <b>Gold:</b>@TempData["Gold"]</p>
+                <div style="width: calc(48px * 6 + 5px); height: calc(48px * 6 + 5px);">
+                    <table class="table table-bordered" id="inv">
+                        <tr>
+                            <td style="width: 48px; height: 48px;"><img src="/img/stick.png" width="48" height="48"/></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                            <td style="width: 48px; height: 48px;"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-        </li>
-        <li class="list-group-item">
-            <p>And so on...</p>
-        </li>
-    </ul>
-    <br/>
-    <h4>Inventory:</h4>
-    <p><img src="/img/shekel.png" width="16" height="16" style="margin-bottom: 3px;"/> <b>Gold:</b>@TempData["Gold"]</p>
-    <div style="width: calc(48px * 6 + 5px); height: calc(48px * 6 + 5px);">
-        <table class="table table-bordered" id="inv">
-        <tr>
-            <td style="width: 48px; height: 48px;"><img src="/img/stick.png" width="48" height="48"/></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-        <tr>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-        <tr>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-        <tr>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-        <tr>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-        <tr>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-            <td style="width: 48px; height: 48px;"></td>
-        </tr>
-    </table>
+        </div>
     </div>
-</div>
+}
+else
+{
+    @Url.Action("Index", "Home", new { area = "" })
+}
