--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -33,7 +33,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseStrength" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> 300
                                     </a>
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseAgility">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseAgility" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> 300
                                     </a>
