--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -61,7 +61,42 @@
                         </div>
                     </li>
                     <li class="list-group-item">
-                        <p>And so on...</p>
+                        <p>Intelligence</p>
+                        <div class="row">
+                            <div class="col">
+                                <div class="progress" style="height: 32px;">
+                                    <div class="progress-bar" role="progressbar"
+                                         style="width: @TempData["Intelligence"]%;">@TempData["Intelligence"]</div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="btn-group btn-group-sm" role="group">
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseIntelligence" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-light">
+                                        <img src="/img/shekel.png" width="16" height="16"/> 300
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <p>Endurance</p>
+                        <div class="row">
+                            <div class="col">
+                                <div class="progress" style="height: 32px;">
+                                    <div class="progress-bar" role="progressbar"
+                                         style="width: @TempData["Endurance"]%;">@TempData["Endurance"]</div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="btn-group btn-group-sm" role="group">
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseEndurance" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-light">
+                                        <img src="/img/shekel.png" width="16" height="16"/> 300
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                 </ul>
                 <br/>
