--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -1,6 +1,25 @@
 @{
     ViewData["Title"] = "Metropolis";
 }
-
-<div class="text-center">
+<div class="row">
+    <div class="col">
+        <img src="/img/necropolis.jpg" class="img-fluid" style="width: 100%;">
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="row">
+            <div class="col-4">
+                <div class="text-center">
+                    <img src="/img/shop-icon.png" class="img-thumbnail img-fluid"
+                         style="height: 128px; width: 128px;"/>
+                </div>
+            </div>
+            <div class="col-8">
+                <a href="#">
+                    <h5>Лавка</h5>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
