--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -6,6 +6,9 @@
         <img src="/img/necropolis.jpg" class="img-fluid" style="width: 100%;">
     </div>
 </div>
+<div class="text-center">
+    <h2>Крестовня</h2>
+</div>
 <div class="row">
     <div class="col-md-6">
         <div class="row">
