--- a/Views/Game/Shop.cshtml
+++ b/Views/Game/Shop.cshtml
@@ -2,44 +2,36 @@
     //ViewData["Title"] = "Metropolis";
 }
 <div class="text-center">
-    <h2>Торговец С.О.Лями</h2>
+    <h2>Торговец С. О. Лями</h2>
 </div>
 <div class="row">
     <div class="col-4">
         <div class="text-center">
             <img src="/img/baryga.jpg" class="img-thumbnail img-fluid"
+                 style="width: 300px;"/>
+        </div>
+    </div>
+    <div class="col-8">
+        <p>
+            Я вас категорически приветствую. 
+            Пока вы осматриваете ассортимент, 
+            предлагаю отведать наш новый эликсир здоровья.
+        </p>
+    </div>
+</div>
+<div class="row">    
+    <div class="col-4">
+        <div class="text-center">
+            <img src="/img/stick.png" class="img-thumbnail img-fluid"
                  style="height: 128px; width: 128px;"/>
         </div>
     </div>
     <div class="col-8">
-        <a href="#">
-            <p>
-                Я вас категорически приветствую. 
-                Пока вы осматриваете ассортимент, 
-                предлагаю отведать наш новый эликсир здоровья.
-            </p>
+        <h5>Палка</h5>
+        <p>Палка, покрытая золотой пылью. Ничего необычного, если бы пыль не была ангельской.</p>
+        <a class="btn btn-light">
+            <img src="/img/shekel.png" width="16" height="16"/> 300
         </a>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
-        <div class="row">    
-            <div class="col-4">
-                <div class="text-center">
-                    <img src="/img/stick.png" class="img-thumbnail img-fluid"
-                         style="height: 128px; width: 128px;"/>
-                </div>
-            </div>
-            <div class="col-8">
-                <a href="#">
-                    <h5>Палка</h5>
-                    <p>Палка, покрытая золотой пылью. Ничего необычного, если бы пыль не была ангельской.</p>
-                    <a class="btn btn-light">
-                        <img src="/img/shekel.png" width="16" height="16"/> 300
-                    </a>
-                </a>
-            </div>
-        </div>
     </div>
 </div>
 
