--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="col-8">
-                <a href="#">
+                <a asp-action="Shop">
                     <h5>Лавка</h5>
                 </a>
             </div>
