Now you can buy palka in our shop. Graz

--- a/Views/Game/Shop.cshtml
+++ b/Views/Game/Shop.cshtml
@@ -27,10 +27,11 @@
         </div>
     </div>
     <div class="col-8">
+        Your gold : @TempData["Gold"]
         <h5>Палка</h5>
         <p>Палка, покрытая золотой пылью. Ничего необычного, если бы пыль не была ангельской.</p>
-        <a class="btn btn-light">
-            <img src="/img/shekel.png" width="16" height="16"/> 300
+        <a class="btn btn-light" asp-controller="Game" asp-action="Buy">
+            <img src="/img/shekel.png" width="16" height="16"/> 10
         </a>
     </div>
 </div>
