--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,5 +1,6 @@
 @model WebApplication1.ViewModels.ProfileViewModel;
 @using Microsoft.AspNetCore.Identity
+@using WebApplication1.Game
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
@@ -10,6 +11,10 @@
 </style>
 @if (SignInManager.IsSignedIn(User))
 {
+     var cdb = new CultivatorContext();
+     var cult = await cdb.GetCultivator(User.Identity.Name);
+     var items = cult.Inventory.Items;
+    
     <h2>Profile of <i>@TempData["Nickname"]</i></h2>
     <div class="container">
         <div class="row">
@@ -105,7 +110,12 @@
                 <div style="width: calc(48px * 6 + 5px); height: calc(48px * 6 + 5px);">
                     <table class="table table-bordered" id="inv">
                         <tr>
-                            <td style="width: 48px; height: 48px;"><img src="/img/stick.png" width="48" height="48"/></td>
+                            <td style="width: 48px; height: 48px;">
+                                @if (items.ContainsKey(0))
+                                {
+                                    <img src="/img/stick.png" width="48" height="48"/>
+                                }
+                            </td>
                             <td style="width: 48px; height: 48px;"></td>
                             <td style="width: 48px; height: 48px;"></td>
                             <td style="width: 48px; height: 48px;"></td>
