--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -109,59 +109,28 @@
                 <p><img src="/img/shekel.png" width="16" height="16" style="margin-bottom: 3px;"/> <b>Gold:</b>@TempData["Gold"]</p>
                 <div style="width: calc(48px * 6 + 5px); height: calc(48px * 6 + 5px);">
                     <table class="table table-bordered" id="inv">
-                        <tr>
-                            <td style="width: 48px; height: 48px;">
-                                @if (items.ContainsKey(0))
-                                {
-                                    <img src="/img/stick.png" width="48" height="48"/>
-                                }
-                            </td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
-                        <tr>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
-                        <tr>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
-                        <tr>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
-                        <tr>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
-                        <tr>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                            <td style="width: 48px; height: 48px;"></td>
-                        </tr>
+                        
+                            @for (int i = 0; i < 6; i++)
+                            {
+                                <tr>
+                                    @for (int j = 0; j < 6; j++)
+                                    {
+                                        if (items.Count > i * 6 + j)
+                                        {
+                                            <td style="width: 48px; height: 48px;">
+                                                <img src="/img/stick.png" width="48" height="48"/>
+                                                <p style="z-index: 3; margin-top: -48px;">
+                                                    <font face="segoe script" size="2px">@items.ToList()[i * 6 + j].Value.Count</font>
+                                                </p>
+                                            </td>            
+                                        }
+                                        else
+                                        {
+                                            <td style="width: 48px; height: 48px;"></td>
+                                        }
+                                    }
+                                </tr>
+                            }
                     </table>
                 </div>
             </div>
