--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     {
         
         <li class="nav-item" style=" alignment: center">
-            <a class="nav-link text-dark" asp-controller="Game" asp-action="Town" title="Town">
+            <a class="nav-link text-dark" asp-controller="Game" asp-action="go" title="Town">
                 Town
             </a>
         </li>
