--- a/Views/Game/Shop.cshtml
+++ b/Views/Game/Shop.cshtml
@@ -1,21 +1,23 @@
+@model WebApplication1.Game.UpdateClasses.NPC.CDealer
+@using WebApplication1.Game.UpdateClasses.NPC
+
+
 @{
     //ViewData["Title"] = "Metropolis";
 }
 <div class="text-center">
-    <h2>Торговец С. О. Лями</h2>
+    <h2>@Model.Name</h2>
 </div>
 <div class="row">
     <div class="col-4">
         <div class="text-center">
-            <img src="/img/baryga.jpg" class="img-thumbnail img-fluid"
+            <img src="@Model.Portret" class="img-thumbnail img-fluid"
                  style="width: 300px;"/>
         </div>
     </div>
     <div class="col-8">
         <p>
-            Я вас категорически приветствую. 
-            Пока вы осматриваете ассортимент, 
-            предлагаю отведать наш новый эликсир здоровья.
+            @Model.Description
         </p>
     </div>
 </div>
@@ -23,18 +25,29 @@
     <b>Баланс:</b> <img src="/img/shekel.png" width="16" height="16"/> @TempData["Gold"]
 </div>
 <div class="row">    
-    <div class="col-4">
-        <div class="text-center">
-            <img src="/img/stick.png" class="img-thumbnail img-fluid"
-                 style="height: 128px; width: 128px;"/>
+    @for (int i = 0; i < Model.Actions.Count; i++)
+    {
+        var tovar = (CDealer.DealerAction) Model.Actions[i];
+        <div class="col-4">
+            <div class="text-center">
+                <img src="@tovar.Item.Description().Picture" class="img-thumbnail img-fluid"
+                     style="height: 128px; width: 128px;"/>
+            </div>
         </div>
-    </div>
-    <div class="col-8">
-        <h5>Палка</h5>
-        <p>Палка, покрытая золотой пылью. Ничего необычного, если бы пыль не была ангельской.</p>
-        <a class="btn btn-light" asp-controller="Game" asp-action="Buy">
-            <img src="/img/shekel.png" width="16" height="16"/> 10
-        </a>
-    </div>
+        <div class="col-8">
+            <h5>@tovar.Item.Description().Name</h5>
+            <p>@tovar.Item.Description().Description</p>
+            
+            <form asp-action="Shop">
+                <input name="slot" type="hidden" value="@i" />
+                <button type="submit" class="btn btn-light">
+                    <img src="/img/shekel.png" width="16" height="16"/> @tovar.Price
+                </button>                
+            </form>
+            
+          
+        </div>
+    }
+   
 </div>
 
