--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,3 +5,4 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
 </div>
+<img src="https://pp.userapi.com/c846323/v846323096/178fc5/4inDIWl46r0.jpg" width="100%">
