--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col">
-        <img src="@Model.BigPicture" class="img-fluid" style="width: 100%;">
+        <img src="@Model.BigPicture"  class="img-fluid" style="width: 100%; height: 300px">
     </div>
 </div>
 <div class="row">
@@ -24,7 +24,7 @@
                        asp-action="go" 
                        asp-route-id="@l.Id" >
                         <h5>@l.Name</h5>
-                        <img src="@l.SmallPicture" class="img-thumbnail img-fluid" style="height: 128px; width: 128px;"/>
+                        <img src="@l.SmallPicture" class="img-thumbnail img-fluid" style="height: 190px; width: 190px;"/>
                     </a>
                 </div>
             }
