--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,11 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        
+        <li class="nav-item" style=" alignment: center">
+            <a class="nav-link text-dark" asp-controller="Game" asp-action="Beastiary" title="Beastiary">
+                Beastiary
+            </a>
+        </li>   
         <li class="nav-item" style=" alignment: center">
             <a class="nav-link text-dark" asp-controller="Game" asp-action="go" title="Town">
                 Town
