--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -135,7 +135,7 @@
                                             <td style="width: 48px; height: 48px;">
                                                 <img src="@GItemsList.Get(items.ToList()[i * 6 + j].Id).Picture" width="48" height="48"/>
                                                 <p style="z-index: 3; margin-top: -48px;">
-                                                    <font face="segoe script" size="2px">@items.ToList()[i * 6 + j].Count</font>
+                                                    <font face="serif" size="2px">@items.ToList()[i * 6 + j].Count</font>
                                                 </p>
                                             </td>            
                                         }
