--- a/Views/Game/Town.cshtml
+++ b/Views/Game/Town.cshtml
@@ -5,6 +5,16 @@
 @{
     ViewData["Title"] = "Metropolis";
 }
+@if (Model.Id != 0)
+{
+    <div>
+        <a class="btn btn-primary"
+           asp-action="go"
+           asp-route-id="@Model.ParentLoc.Id">
+            Назад
+        </a>
+    </div>
+}
 <div class="text-center">
     <h2>@Model.Name</h2>
 </div>
@@ -14,12 +24,12 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" style="margin: 0 auto;">
         <div class="row">
             @foreach (var locs in Model.Directions)
             {
                 CBuilding l = (CBuilding) GLocationsList.GetById(locs.LocationId);
-                <div class="col-8">
+                <div class="col-6">
                     <a a asp-controller="Game"
                        asp-action="go" 
                        asp-route-id="@l.Id" >
