--- a/Views/Game/Shop.cshtml
+++ b/Views/Game/Shop.cshtml
@@ -5,16 +5,7 @@
 @{
     //ViewData["Title"] = "Metropolis";
 }
-@if (Model.Id != 0)
-{
-    <div>
-        <a class="btn btn-primary"
-           asp-action="go"
-           asp-route-id="@Model.ParentLoc.Id">
-            Назад
-        </a>
-    </div>
-}
+<partial name="_Back" />
 <div class="text-center">
     <h2>@Model.Name</h2>
 </div>
