Add error message

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -242,7 +242,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseStrength" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseStrength" >+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> @StatPrice((int)cult.Stats.MainStats.Strength)
                                     </a>
@@ -261,7 +261,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseAgility" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseAgility" >+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> @StatPrice((int)cult.Stats.MainStats.Agility)
                                     </a>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseIntelligence" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseIntelligence" >+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> @StatPrice((int)cult.Stats.MainStats.Intelligence)
                                     </a>
@@ -299,7 +299,7 @@
                             </div>
                             <div class="col">
                                 <div class="btn-group btn-group-sm" role="group">
-                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseEndurance" asp-route-returnUrl="@Url.Action("Profile", "Account")">+</a>
+                                    <a class="btn btn-success" asp-controller="Account" asp-action="IncreaseEndurance" >+</a>
                                     <a class="btn btn-light">
                                         <img src="/img/shekel.png" width="16" height="16"/> @StatPrice((int)cult.Stats.MainStats.Endurance)
                                     </a>
