--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,12 +32,21 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+<div class="container">
+    @{
+        object errorMessage;
+    }
+    @if (TempData.TryGetValue("Error", out errorMessage))
+    {
+        <div class="alert alert-danger" role="alert">
+            @Html.Raw(errorMessage)
+        </div>
+    }
+    <partial name="_CookieConsentPartial"/>
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
